# building-microservice-system-gray-brown-crimson

./: .dockerignore  Dockerfile  README.md  alembic_notification.ini  alembic_users.ini  alembic_workflow.ini  docker-compose.yml  main.py  project.toml  pyproject.toml  requirements.txt
alembic/: env.py
app/api/: dependencies.py  main.py
app/api/routers/: polls.py  users.py  votes.py
app/core/application/: poll_service_protocol.py  user_service_protocol.py
app/core/domain/: Poll.py  PollStatus.py  Vote.py  __init__.py  answer.py  poll.py  question.py  user.py  vote.py
app/core/dto/: CreatePollDto.py  CreateQuestionDto.py  CreateUserDto.py  PollDto.py  __init__.py  create_answer_dto.py  create_poll_dto.py  create_user_dto.py  create_vote_dto.py  poll_dto.py  question_dto.py  update_poll_status_dto.py  update_user_dto.py  user_dto.py  vote_dto.py
app/core/exception/: PollNotFoundException.py  __init__.py  poll_not_editable_exception.py
app/core/infrastructure/: __init__.py  database.py  models.py  poll_repository.py  (+2 more)
k8s/: 01-secrets.yaml  02-configmap-app.yaml  03-postgres.yaml  04-rabbitmq.yaml  05-configmap-gateway.yaml  06-core-service.yaml  07-users-service.yaml  08-notification-service.yaml  09-workflow-service.yaml  10-gateway.yaml  11-ingress.yaml  README.md
nginx/: nginx.conf
src/core_service/: Dockerfile
src/notification_service/: Dockerfile
src/shared/: __init__.py  correlation.py
src/users_service/: Dockerfile
src/workflow_service/: Dockerfile
tests/: test_api.py  test_domain.py  test_poll_service.py  test_vote_service.py
(+149 files in other folders)
