[project]
name = "building-microservice-system-gray-brown-crimson"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "nanoid>=2.0.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["."]
